[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "venny4py"
version = "1.0.3"
authors = [
  { name="Timur Yergaliyev", email="timyerg@gmail.com" },
]
description = "Python3 package to create Venn diagrams with 2-4 sets."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/timyerg/venny4py"
"Bug Tracker" = "https://github.com/timyerg/venny4py/issues"
